# AgentNexus-LangChain-FastAPI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .watchfilesignore  AGENTS.md  MIGRATION_GUIDE.md  Makefile  README.md  SECURITY.md  alembic.ini  candidate_copilot.md  celery_config.py  docker-compose.yml  fastmcp.json  improvment_plan.md  opencode.json  pyproject.toml
.github/: LangChain-LangGraph_organized_reference.md  LangChain-LangGrpah_thingies.md  coding_guideline_based_on_JSF_MIRSA.md  copilot-instructions.md  design-patterns.md
.github/ISSUE_TEMPLATE/: auth_implementation.md
.github/agents/: fastapi.md
.github/instructions/: security_check.md
.github/prompts/: plan.prompt.md
.github/skills/crawl4ai-skill/scripts/: extraction_pipeline.py
.github/skills/crawl4ai-skill/tests/: run_all_tests.py  test_advanced_patterns.py
.github/skills/fastapi-skill/: SKILL.md
.github/skills/fastmcp-skill/: SKILL.md
.github/skills/fastmcp-skill/agents/: openai.yaml
.github/skills/fastmcp-skill/references/: 01-apps-ui.md  02-cli-install-run-auth.md  03-client-core.md  04-client-transports-deployment.md  05-project-setup-quickstart.md  06-auth-provider-guides-1.md  07-client-framework-integrations.md  08-config-openapi-auth-guides-2.md  09-auth-architecture.md  10-composition-context-lifecycle.md  11-middleware-lifecycle.md  12-provider-patterns-resources.md  13-server-core-storage-testing.md  14-tools-and-code-mode.md  15-transforms-visibility.md  16-changelog-and-auth-utils.md  17-contributing-and-tests.md  18-upgrade-guides.md  19-api-reference-cli.md  20-api-reference-client.md  21-api-reference-server-auth.md  22-api-reference-server-runtime.md  23-api-reference-server-advanced.md  24-api-reference-utilities.md  index.md
.github/skills/langchain-langgraph/references/: 02-prompts-and-messages.md  04-model-selection-and-structured-output.md  07-langgraph-state-nodes-edges.md  09-interrupts-hitl-resume.md  10-subgraphs-and-streaming.md  11-multi-agent-patterns.md  12-memory.md  index.md
.github/skills/pg-textsearch-skill/: SKILL.md
.github/skills/pg-textsearch-skill/agents/: openai.yaml
.github/skills/pgvector-skill/: SKILL.md
.github/workflows/: test.yml
.kiro/steering/: python-fastapi-langchain-standards.md
.opencode/: AGENTS.md  opencode.json
.opencode/agents/: architect-reviewer.md  backend-developer.md  principal-software-engineer.md
.opencode/skills/langchain-langgraph/: SKILL.md
docker/: dev.Dockerfile  prod.Dockerfile
docs/: AI_agents_security.md  CAP for AI Agents.md  DB_insights.md  Evals.md  LANGCHAIN_COMPLETE_GUIDE.md  LANGCHAIN_LANGGRAPH_CHEATSHEET.md  MCP_things.md  RAG_decisions.md  README.md  ROP_patternMatching_return_tips.md  ai-agent-engineering-guide.md  ai-agent-learning-guide.html  kiro_sdd_ears_playbook.md  pg_textsearch.md  pgvector.md  railway-deployment-plan.md  result-pattern-adoption-plan.md  returns_ROP_patternMatching_adoption_plan.md
docs/Lynk_Plan/: api_server_plan.md  editor_plan.md  lynk_linter_lld.md  lynk_linter_plan.md  lynk_v1_v2_split.md
docs/code-maintainability/: README.md  agent-saul-websocket-hardening-plan.md  simple-interfaces-deep-modules-skill.md  simple-interfaces-deep-modules.md
docs/superpowers/plans/: 2026-04-05-merged-rag-module.md  2026-04-13-reconciliation-langgraph-package-split.md  2026-05-28-legal-agent-persona-integration.md  2026-05-28-model-config-simplification.md  2026-05-31-agent-saul-websocket-hardening.md  ingestion_plan.md
docs/superpowers/specs/: 2026-04-05-merged-rag-module-design.md  2026-05-28-langchain-langgraph-skill-redesign.md  2026-05-28-legal-agent-persona-design.md  2026-05-28-model-config-simplification-design.md  2026-05-28-opencode-setup-design.md
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
infra/gcp/: LOGURU_GUIDE.md
init/: init-extensions.sql
lynk/: go.mod
lynk/cmd/lynk/: main.go
lynk/testdata/contracts/: ambiguous-days.docx  broken-cross-reference.docx  conflicting-dispute.docx  minimal-valid.docx  missing-governing-law.docx
lynk/testdata/golden/: conflicting-dispute.json
scripts/: alembic.sh  docker.sh  init-db.sql
src/alembic/: env.py
src/alembic/versions/: 2bc7726317f6_rename_metadata_to_meta_data.py  8a7d9b1c2e3f_add_search_documents_and_chunks.py  9f4a1b7c6d2e_contract_kb_clauses_pg_textsearch.py  c0c17c6eb1cc_initial_schema_document_vectors_and_.py
src/app/: __init__.py  main.py  server.py
src/app/api/: __init__.py  generation_with_cb.py  strict_envelope.py  v1.py  v2.py
src/app/config/: __init__.py  enums.py  settings.py
src/app/connections/: __init__.py  celery.py  httpx_client.py  mongodb.py  neo4j.py  postgres.py  redis.py  tavily.py
src/app/core/: __init__.py  settings.py
src/app/examples/: CELERY.md  FastMCP-guide.md  logger_usage_example.py  redis_examples.py
src/app/features/: __init__.py
src/app/features/auth/: dto.py  (+9 more)
src/app/lifecycle/: lifespan.py  signals.py
src/app/middleware/: __init__.py  global_exception_handler.py  server_middleware.py
src/app/shared/: __init__.py  base.py  response_type.py
src/app/utils/: __init__.py  apiFeatures.py  exceptions.py  httpResponse.py  http_response.py  logger.py  logger_enhanced.py  logger_examples.py  quicker.py  rate_limit.py  redis_func.py  response_type.py  toon_parser.py  toons.py
src/database/: __init__.py  base.py
src/database/schemas/: __init__.py  chat_messages.py  document_vectors.py  memory_schema.py
src/database/seeders/: base.py  run_seeders.py
src/tasks/: CELERY.md  __init__.py  auth_email_tasks.py  document_extraction_tasks.py  example.py  memory_decay_reconciliation_tasks.py  memory_tasks.py  pageindex_tasks.py  search_tasks.py
tests/performance/: Ingestion_arch.md  MCP_things.md  Saul_agent_Arch.md  hidden_info.md  memory-arch-plan_Agent_Saul.md  memory-arch.md  memory_optimization_cheatsheet.md  python_memory_optimization_cheatsheet.md  todo.md
tests/unit/search/: test_chunking.py  test_fusion.py  test_rag.py
(+299 files in other folders)
