[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-fastapi-production"
version = "1.0.0"
description = "Production-grade FastAPI application with LangChain integration"
license = "MIT"
authors = [{ name = "Harmeet Singh", email = "harmeetsinghfbd@gmail.com" }]
maintainers = [{ name = "Harmeet Singh", email = "harmeetsinghfbd@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: AI Agents :: Libraries :: Langchain",
]
keywords = ["fastapi", "langchain", "ai", "api", "async"]
requires-python = ">=3.12,<3.14"
dependencies = [
    # --- WEB FRAMEWORK ---
    "fastapi[standard]==0.129.0",
    "uvicorn[standard]>=0.34.0",
    "uvloop>=0.21.0,<1.0.0",
    "httptools>=0.7.1",
    "python-multipart>=0.0.20",
    # --- DATA VALIDATION ---
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    # --- HTTP CLIENT ---
    "httpx[http2]>=0.28.1,<1.0.0",
    # --- AI/LLM FRAMEWORK ---
    "langchain>=1.2.10",
    "langchain-core>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-tavily>=0.2.17",
    # "langchain-neo4j>=0.8.0",
    "langchain-docling>=2.0.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.1.0",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langsmith>=0.7.1",
    "deepagents>=0.4.11",
    # --- DATABASE: POSTGRESQL ---
    "sqlalchemy==2.0.39",
    "alembic==1.16.5",
    "asyncpg==0.29.0",
    "pgvector>=0.4.2",
    # --- DATABASE: MONGODB ---
    "motor==3.7.1",
    "beanie>=2.0.1",
    # --- DATABASE: NEO4J ---
    "neo4j>=6.0.3",
    # --- CACHE: REDIS ---
    "redis[hiredis]>=5.1.0,<6.0.0",
    # --- MESSAGE QUEUE: CELERY + RABBITMQ ---
    "celery>=5.6.2",
    "flower>=2.0.1",
    "faststream>=0.6.2",
    "graphiti-core[google-genai]>=0.24.1",
    # --- WEB SCRAPING ---
    "crawl4ai>=0.8.0,<1.0.0",
    "nh3>=0.3.3",
    # --- DOCUMENT PROCESSING ---
    "docling>=2.72.0",
    "pageindex>=0.2.5.1",
    # --- AUTHENTICATION ---
    "bcrypt>=5.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    # --- LOGGING ---
    "loguru==0.7.3",
    # --- UTILITIES ---
    "aiofiles==24.1.0",
    "orjson==3.10.1",
    "nanoid==2.0.0",
    "psutil==7.1.0",
    "tenacity>=9.1.2",
    "asyncer>=0.0.17",
    "asyncio>=4.0.0",
    # --- API FEATURES ---
    "fastapi-pagination==0.12.1",
    "fastapi-limiter>=0.2.0",
    # --- MONITORING ---
    "prometheus-client>=0.23.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
    # --- LANGUAGE DETECTION ---
    "langextract>=1.1.1",
    # --- MCP ---
    "fastmcp>=3.1.0",
    # --- OTHER ---
    "toons>=0.5.3",
    "urllib3>=2.2.0",
    "charset-normalizer>=3.0.0",
    "sqlmodel>=0.0.37",
    "cognee>=0.5.3",
    "tree-sitter-python>=0.25.0",
    "async-timeout>=5.0.1",
    "tree-sitter>=0.25.2",
    "pendulum>=3.2.0",
    "icecream>=2.1.10",
    "fastapi-guard>=4.4.0",
    "argon2-cffi>=25.1.0",
    "authlib>=1.6.9",
    "itsdangerous>=2.2.0",
    "boto3>=1.42.68",
    "resend>=2.24.0",
    "botocore>=1.42.68",
    "perfect",
    "schemathesis",
    "honcho-ai>=2.0.1",
]

[project.scripts]
dev = "app.server:main"
lint = "ruff:check"
format = "ruff:format"
type-check = "ty:check"
# precommit = "pre-commit:run"
migrate = "alembic:upgrade"
test = "pytest:main"


[project.optional-dependencies]
dev = [
    "pytest>=8.2.2,<9.0.0",
    "pytest-asyncio>=0.23.7,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0", # bumped slightly; use latest stable
    "pre-commit==4.3.0",
    "bandit>=1.8.6,<2.0.0",
    "safety>=3.6.2,<4.0.0",
    "ty>=0.0.1a25", # Astral type checker
]
test = [
    "pytest>=8.2.2,<9.0.0",
    "pytest-asyncio>=0.23.7,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
    "factory-boy>=3.3.0,<4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/Harmeet10000/langchain-fastapi-production"
Documentation = "https://github.com/Harmeet10000/langchain-fastapi-production#readme"
Repository = "https://github.com/Harmeet10000/langchain-fastapi-production"
"Bug Tracker" = "https://github.com/Harmeet10000/langchain-fastapi-production/issues"

# ────────────────────────────────────────
# UV – Dependency & Lockfile Management
# ────────────────────────────────────────
[tool.uv]
default-groups = ["dev"]               # uv sync installs dev tools by default
# Optional: add if you hit index issues
# index-strategy = "first-index"

# Your existing dependency-groups is perfect (modern replacement for old dev-dependencies)
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.8.0",
    "ty>=0.0.20",
]

# ────────────────────────────────────────
# RUFF – Linting & Formatting
# ────────────────────────────────────────
[tool.ruff]
line-length = 100                      # Modern choice; more room for chains
target-version = "py312"
src = ["src"]                          # First-party code layout

# Exclude common directories (explicit for clarity)
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E", "W",        # pycodestyle
    "F",             # pyflakes (unused/undefined)
    "I",             # isort
    "UP",            # pyupgrade (modern syntax)
    "B",             # bugbear (common bugs)
    "A",             # builtins shadowing
    "C4",            # comprehensions
    "PERF",          # performance hints (hot paths)
    "TRY",           # tryceratops (exceptions in async)
    "ASYNC",         # async misuse (critical!)
    "RUF",           # ruff-specific
    "PL",            # pylint port (selective)
    "ANN",           # annotations (complements ty)
    "S",             # bandit (security)
    "SIM",           # simplify
    "PTH",           # pathlib over os.path
    "TCH",           # type-checking imports
    "RET",           # return statements
    "ARG",           # unused arguments
]

# Enable autofix for safe rules only
fixable = [
    "I",             # isort (import sorting)
    "F401",          # unused imports
    "UP",            # pyupgrade (syntax modernization)
    "C4",            # comprehensions
    "SIM",           # simplifications
    "PTH",           # pathlib
    "RUF",           # ruff-specific
    "TC",           # type-checking imports
]
unfixable = [
    "B",             # bugbear (needs review)
    "ANN",           # annotations (manual decision)
    "S",             # security (needs review)
]
ignore = [
    "E501",          # line-too-long → formatter handles
    "ANN401",        # Any type (LangChain heavy)
    "ISC001",        # conflicting with formatter
    "TRY003",        # raise from e – sometimes verbose
    "PLR0913",       # too-many-arguments (agents/graphs)
    "PLR2004",       # magic values (AI logic)
    "PLR0911",       # too-many-returns (graph flows)
    "ANN001",        # Missing type annotation (too noisy in AI code)
    "ANN002",        # Missing type annotation for function/method (too noisy in AI code)
    "ANN003",        # Missing type annotation for *args (too noisy in AI code)
    "ANN204",        # Missing type annotation for self (common in FastAPI)
]

[tool.ruff.lint.flake8-type-checking]
strict = true
exempt-modules = [
    "pydantic",
    "fastapi",
    "langchain",
    "langgraph",
    "docling",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "pydantic.Field",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
known-third-party = ["fastapi", "pydantic", "sqlalchemy", "langchain"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",       # No type annotations required in tests
    "D",         # No docstrings required in tests
    "S101",      # Allow assert statements
    "PLR2004",   # Allow magic values
    "ARG001",    # Allow unused arguments
    "E501",      # Allow long lines
]
"src/alembic/migrations/*.py" = [
    "ANN",
    "N999",      # Allow invalid module names
    "E501",      # Allow long lines
    "F401",      # Allow unused imports
]
"**/__init__.py" = [
    "ANN",       # No type annotations required in __init__.py
    "F401",      # Allow unused imports (re-exports)
    "E402",      # Allow imports not at top
]
"**/generated/**.py" = [
    "ANN",       # No type annotations required in generated code
    "E402",      # Allow imports not at top
    "F841",      # Allow unused variables
]
"**/_*.py" = ["ANN201"]             # Private modules



[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ────────────────────────────────────────
# TY – Type Checker (Astral)
# ────────────────────────────────────────
[tool.ty]
# Inferred from requires-python, but be explicit
[tool.ty.environment]
python-version = "3.12"
root = ["src"]                         # Matches your src layout

[tool.ty.rules]
unresolved-attribute = "warn"          # Allows Pydantic v2 magic
redundant-cast = "warn"
unused-ignore-comment = "warn"
unresolved-import = "error"
possibly-missing-attribute = "error"
possibly-missing-import = "error"
invalid-assignment = "error"
unresolved-reference = "error"
await-on-non-awaitable = "error"       # Critical for asyncpg/motor
non-awaitable-in-async-function = "error"  # upgraded from warn
possibly-unbound-variable = "error"

[tool.ty.terminal]
output-format = "full"

# ────────────────────────────────────────
# Other sections unchanged (alembic, pytest, coverage, bandit)
# ────────────────────────────────────────

[tool.alembic]
script_location = "src/alembic"
version_locations = "src/database/migrations"

[[tool.alembic.post_write_hooks]]
name = "ruff-format"
type = "exec"
executable = "ruff"
options = "format REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff-fix"
type = "exec"
executable = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B601"]
